--- a/page1.html
+++ b/page1.html
@@ -49,14 +49,14 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#header1-3b">O biurze</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-3i">Dlaczego my?</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-3y">Usługi</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="page1.html#content9-4m">Galeria</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#contacts3-37">Kontakt</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#header1-3b">O biurze</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-3i">Dlaczego my?</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-3y">Zespół</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="page1.html#content9-4m">Galeria</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#contacts3-37">Kontakt</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-7" href="tel:+48177421438"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
                     +48(17)7421438&nbsp;</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section article content9 cid-rAU9adBktr" id="content9-4m">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section article content9 cid-rAU9adBktr" id="content9-4m">
     
      
 
@@ -171,7 +171,7 @@
   <script src="assets/slidervideo/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
